# assistant

./: Cargo.toml  README.md  diesel.toml  schema.graphql
client/: .prettierrc  next.config.js  package-lock.json  package.json
client/src/: styles.scss
client/src/components/: ai-request.tsx
client/src/components/material/: button.tsx  card.tsx  fab.tsx  layout-grid.tsx  textfield.tsx
client/src/pages/: _app.tsx  index.tsx
client/src/pages/admin/: queue.tsx
client/src/pages/admin/queue/: [aiRequestId].tsx
client/src/services/: apollo.ts  session.ts
lib/db/: Cargo.toml
lib/db/src/: lib.rs  model.rs  schema.rs
migrations/2020-12-06-164013_init/: down.sql  up.sql
src/: graphql.rs  main.rs
src/graphql/: context.rs
