[package]
name = "db"
version = "0.1.0"
authors = ["Icy Defiance <icydefiance@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.19"
diesel = { git = "https://github.com/diesel-rs/diesel", features = ["chrono", "uuid", "r2d2", "postgres"] }
futures = { version = "0.3.8", features = ["thread-pool"] }
lazy_static = "1.4.0"
# uuid version must match diesel's uuid dependency
uuid = { version = ">=0.7.0, <0.9.0", features = ["v4"] }
